# shop_project

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
src/models/: base_order_category.py  category.py  category_iterator.py  order.py  product.py
src/models/products/: lawn_grass.py  smartphone.py
src/utils/: loader.py
tests/: test_category.py  test_loader.py  test_order.py  test_product.py
tests/test_products/: test_category_add.py  test_smartphone.py
