[project]
name = "shop-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Kris-KK-Mod",email = "kriskurchaeva@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "coverage (>=7.9.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
